# aria-sdr

./: .dockerignore  .env  .env_temp  .gitattributes  .gitignore  .gitlab-ci-custom.yml  .gitlab-ci-template.yml  .gitlab-ci.yml  .pre-commit-config.yaml  ANALISE_ARIA_FILES.md  ANALISE_DUPLICATAS.md  ANALISE_PROJETO_ARIA.md  ANALISE_TESTES.md  CHANGELOG.md  CHECKLIST_PRODUCAO.md  CLOUDFLARE_DEPLOY.md  CLOUDFLARE_PAGES_DEPLOY.md  COMECE_AQUI.txt  CONFIGURACAO_COMPLETA.md  CONTRIBUTING.md  DEPLOY_GITHUB.md  DEPLOY_OPTIONS.md  Dockerfile  Dockerfile.prod  FIX_PAGES_DEPLOY.md  FRONTEND_BACKEND.md  GITLAB_SETUP.md  GITLAB_VARIABLES_SETUP.md  GUIA_AGNO_FRAMEWORK.md  GUIA_SETUP_SUPABASE.md  GUIA_TESTE_MINDCHAT.md  HABILITAR_RAG.md  INDICE_DOCUMENTACAO.md  INICIO_RAPIDO.md  LICENSE  LIMPAR_CACHE_FRONTEND.md  Makefile  PROJETO_ONLINE.md  PROXIMO_NIVEL_AGNO.md  PR_BODY.md  (+110 more)
agno/: README.md  agentos_config.yaml  agentos_config_optimized.yaml  aria_agent_config.json  aria_agent_optimized.py
api/: main.py  requirements.txt
backup_agno_files/: main_agno_active.py  main_agno_config.py  main_agno_final.py
docs/: AGNO_OPTIMIZATION_PLAN.md  ARCHITECTURE.md  ARIA-FAQ-PTBR-v1 (baseline).jsonl  CI-CD-INPUTS-GUIDE.md  CONTROL_PLANE_SETUP.md  GITLAB_WEBHOOK_INTEGRATION.md  INTEGRATION.md  MINDCHAT_INTEGRATION.md  faq.md  n8n-workflows-migrated.md
k8s/: README.md
n8n/: n8n.json  n_8_n_webhook→normalize→embeddings→supabase_rpc→build_context→assistant→respond.json  readme-n8n.md
patches/: 0001-chore-pre-commit-normalize-EOF-and-line-endings.patch  r01-code-review.patch  r02-rag-routing.patch
prompts/: envio.md  recebimento.md
reflector/: .gitignore  CONFIG.md  README.md  check_setup.py  env.example  install.bat  install.sh  main.py  pyproject.toml  requirements.txt  setup.py  test_api.py  test_system.py
scripts/: check_agno_config.py  connect_to_control_plane.py  connect_to_control_plane_fixed.py  create_agent_from_config.py  create_pr.ps1  dev.ps1  ingest_faqs.py  ingest_rag_supabase.py  quick_rag_check.py  setup_agno_whatsapp.py  setup_openai_agent.py  (+2 more)
(+55 files in other folders)
