[project]
name = "aria-sdr-reflector"
version = "1.0.0"
description = "ARIA-SDR Reflector - Versão simplificada com RAG Supabase"
authors = [
    {name = "AR Online", email = "dev@ar-online.com.br"}
]
readme = "README.md"
requires-python = ">=3.8"

[dependencies]
agno = "*"
openai = ">=1.0.0"
python-dotenv = ">=1.0.0"
numpy = ">=1.20.0"
requests = ">=2.25.0"
uvicorn = ">=0.20.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
